fix text overflows

--- a/src/Css/Main.css
+++ b/src/Css/Main.css
@@ -35,52 +35,46 @@ body {
 h1 {
   font-size: 5rem;
   line-height: 1.35; }
-  @media (max-width: 56.25em) {
-    h1 {
-      font-size: 3.5rem; } }
-  @media (max-width: 37.5em) {
-    h1 {
-      font-size: 2.7rem; } }
 
 h2 {
   font-size: 1.85rem;
   font-weight: 900;
   line-height: 1.35;
   text-transform: uppercase; }
+  @media (max-width: 56.25em) {
+    h2 {
+      font-size: 4rem; } }
+  @media (max-width: 37.5em) {
+    h2 {
+      font-size: 3.5rem; } }
 
 p {
   font-size: 1.55rem;
   font-weight: 500; }
   @media (max-width: 56.25em) {
     p {
-      font-size: 1.4rem;
-      padding: 0 4rem 0 4rem; } }
+      font-size: 4rem; } }
   @media (max-width: 37.5em) {
     p {
-      font-size: 1.2rem; } }
+      font-size: 2.5rem; } }
 
 h3 {
   font-size: 3.2rem;
   line-height: 1.35; }
-  @media (max-width: 56.25em) {
-    h3 {
-      font-size: 2.6rem; } }
-  @media (max-width: 37.5em) {
-    h3 {
-      font-size: 1.4rem; } }
 
 h4 {
   font-size: 2.2rem;
   font-weight: bold;
-  line-height: 1.35; }
+  line-height: 1.35;
+  top: 0;
+  left: 0; }
   @media (max-width: 56.25em) {
     h4 {
-      font-size: 1.8rem;
-      margin-top: 10rem; } }
+      font-size: 4.2rem;
+      margin-top: 3rem; } }
   @media (max-width: 37.5em) {
     h4 {
-      font-size: 1.5rem;
-      margin-top: 8rem; } }
+      font-size: 3rem; } }
 
 .header__logo-box {
   position: absolute;
@@ -151,7 +145,8 @@ h4 {
       margin-bottom: 1rem; } }
 
 .u-align-text {
-  text-align: right; }
+  text-align: right;
+  margin-bottom: 3rem; }
   @media (max-width: 56.25em) {
     .u-align-text {
       text-align: center; } }
@@ -162,7 +157,8 @@ h4 {
 .u-align-item {
   position: relative;
   top: 50%;
-  left: 5%; }
+  left: 5%;
+  margin-bottom: 3rem; }
   @media (max-width: 56.25em) {
     .u-align-item {
       top: 0;
@@ -215,6 +211,12 @@ h4 {
     .composition__photo--p3 {
       left: 0;
       top: -20rem; }
+      @media (max-width: 56.25em) {
+        .composition__photo--p3 {
+          left: 25%; } }
+      @media (max-width: 37.5em) {
+        .composition__photo--p3 {
+          left: 14%; } }
 
 .header {
   position: relative;
@@ -227,7 +229,7 @@ h4 {
       text-align: center; } }
   @media (max-width: 37.5em) {
     .header {
-      min-height: 120vh; } }
+      min-height: 160vh; } }
 
 .row {
   max-width: 114rem;
@@ -375,14 +377,20 @@ h4 {
 .features__section {
   margin-top: 15rem;
   min-height: 120vh; }
+  .features__section .Features__section-secondary {
+    display: flex; }
   .features__section-title {
-    position: relative;
-    width: fit-content;
-    top: 0;
-    left: 10%; }
+    display: flex;
+    flex-direction: column;
+    margin-left: 8rem;
+    margin-bottom: 3rem; }
     @media (max-width: 56.25em) {
       .features__section-title {
-        text-align: center; } }
+        text-align: center;
+        margin-left: 0;
+        align-items: center;
+        justify-content: center; } }
     @media (max-width: 37.5em) {
       .features__section-title {
-        text-align: center; } }
+        text-align: center;
+        margin-left: 0; } }
