--- a/src/Sass/base/_typography.scss
+++ b/src/Sass/base/_typography.scss
@@ -9,54 +9,46 @@ body {
 h1 {
   font-size: 5rem;
   line-height: 1.35;
-
-  @include respond(tab-port){
-    font-size: 3.5rem;
-  }
-
-  @include respond(phone){
-    font-size: 2.7rem;
-  }
 }
 h2{
   font-size: 1.85rem;
   font-weight: 900;
   line-height: 1.35;
   text-transform: uppercase;
+  @include respond(tab-port){
+    font-size: 4rem;
+  }
+  @include respond(phone){
+    font-size: 3.5rem;
+  }
 }
 
 p {
   font-size: 1.55rem;
   font-weight: 500;
   @include respond(tab-port){
-    font-size: 1.4rem;
-    padding: 0 4rem 0 4rem;
+    font-size: 4rem;
   }
   @include respond(phone){
-    font-size: 1.2rem;
+    font-size: 2.5rem;
   }
 }
 h3 {
   font-size: 3.2rem;
   line-height: 1.35;
-  @include respond(tab-port){
-    font-size: 2.6rem;
-  }
-  @include respond(phone){
-    font-size: 1.4rem;
-  }
 }
 h4 {
   font-size: 2.2rem;
   font-weight: bold;
   line-height: 1.35;
+  top: 0;
+  left: 0;
   @include respond(tab-port){
-    font-size: 1.8rem;
-    margin-top: 10rem;
+    font-size: 4.2rem;
+    margin-top: 3rem;
   }
   @include respond(phone){
-    font-size: 1.5rem;
-    margin-top: 8rem;
+    font-size: 3rem;
   }
 }
 
