--- a/src/Sass/layout/_header.scss
+++ b/src/Sass/layout/_header.scss
@@ -10,7 +10,7 @@
     }
   }
   @include respond(phone){
-    min-height: 120vh;
+    min-height: 160vh;
   }
  
 } 
